--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,8 @@
 /* import google font */
 @import url("https://fonts.googleapis.com/css2?family=Glory:wght@100;200;300;400;500;600;700;800&display=swap");
 
+/* reset browser default style */
+
 *,
 *::after,
 *::before {
@@ -18,7 +20,7 @@
   --black-color: #000000c5;
   --white-color: #ffffffff;
   --danger-color: #dc3545;
-  --transparent-color: rgb(204, 203, 203);
+  --transparent-color: #cccbcb;
 }
 
 body {
@@ -71,10 +73,6 @@ body {
     linear-gradient(90deg, var(--white-color), var(--white-color));
 }
 
-h1,
-h3 {
-  color: var(--black-color);
-}
 
 .container {
   width: 1100px;
@@ -101,6 +99,7 @@ h3 {
 .mac__content h1 {
   font-size: 40px;
   line-height: 45px;
+  color: var(--black-color);
 }
 
 .mac__content p {
@@ -108,6 +107,7 @@ h3 {
   line-height: 25px;
   text-align: justify;
   margin-top: 20px;
+  color: var(--black-color);
 }
 
 /* mac configuration css */
@@ -119,6 +119,7 @@ h3 {
 .mac__configuration h3 {
   font-size: 20px;
   margin-bottom: 10px;
+  color: var(--black-color);
 }
 
 .memory,
@@ -137,6 +138,7 @@ h3 {
   border: 1px solid var(--black-color);
   border-radius: 5px;
   transition: all 0.5s ease-in-out;
+  color: var(--black-color);
 }
 
 .mac__configuration .main__button:hover {
@@ -156,6 +158,7 @@ table > tbody td {
   font-weight: 600;
   font-size: 18px;
   border-collapse: collapse;
+  color: var(--black-color);
 }
 
 table > tbody .border__none {
@@ -177,6 +180,7 @@ table > tfoot td {
   font-weight: 600;
   font-size: 18px;
   border-collapse: collapse;
+  color: var(--black-color);
 }
 
 table > tfoot .table__total {
