--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -1,6 +1,13 @@
-@media only screen and (max-width: 1150px) {
+@media only screen and (max-width: 1200px) {
   .container {
-    width: 90%;
+    width: 97%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .container {
+    width: 93%;
     margin: 0 auto;
   }
 }
